--- a/src/main/resources/data-a.properties
+++ b/src/main/resources/data-a.properties
@@ -5,3 +5,6 @@ dht.uri = http://localhost:8091
 
 dht.cache.enabled = true
 dht.cache.duration = PT30S
+
+preload.enabled = false
+preload.path = none
