Sort out some bugs

--- a/src/main/resources/engine-a.properties
+++ b/src/main/resources/engine-a.properties
@@ -1,6 +1,7 @@
 port=8091
 
-dht.rosterUrl = //localhost:8850
+dht.port = 8901
+dht.nodes = //localhost:8902/node, //localhost:8903/node
 
 dht.cache.enabled = false
 dht.cache.duration = PT30S
