--- a/src/main/resources/engine-b.properties
+++ b/src/main/resources/engine-b.properties
@@ -1,6 +1,7 @@
 port=8092
 
-dht.rosterUrl = //localhost:8850
+dht.port = 8902
+dht.nodes = //localhost:8901/node
 
 dht.cache.enabled = false
 dht.cache.duration = PT30S
