--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.goodforgoodbusiness</groupId>
+		<groupId>com.colabriq</groupId>
 		<artifactId>sccp</artifactId>
 		<version>0.2-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
@@ -16,20 +16,14 @@
 	<name>SCCP Utils</name>
 
 	<dependencies>
-<!-- 		<dependency>
-			<groupId>org.goodforgoodbusiness</groupId>
-			<artifactId>dhtengine</artifactId>
-			<version>0.2-SNAPSHOT</version>
-		</dependency> -->
-	
 		<dependency>
-			<groupId>org.goodforgoodbusiness</groupId>
+			<groupId>com.colabriq</groupId>
 			<artifactId>rdfendpoint</artifactId>
 			<version>0.2-SNAPSHOT</version>
 		</dependency>
 	
 		<dependency>
-			<groupId>org.goodforgoodbusiness</groupId>
+			<groupId>com.colabriq</groupId>
 			<artifactId>shared</artifactId>
 			<version>0.2-SNAPSHOT</version>
 		</dependency>
@@ -45,12 +39,6 @@
 			<groupId>org.apache.jena</groupId>
 			<artifactId>jena-text</artifactId>
 			<version>${jena.version}</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.sparkjava</groupId>
-			<artifactId>spark-core</artifactId>
-			<version>2.7.2</version>
 		</dependency>
 		
 		<dependency>
@@ -73,47 +61,34 @@
 	</dependencies>
 	
 	<build>
-		<finalName>${project.artifactId}-${project.version}</finalName>
+		<finalName>${artifactId}-${version}</finalName>
 		<directory>target</directory>
 		<outputDirectory>target/classes</outputDirectory>
 		<testOutputDirectory>target/test-classes</testOutputDirectory>
 		<sourceDirectory>src/main/java</sourceDirectory>
 		<testSourceDirectory>src/test/java</testSourceDirectory>
+		
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
 			</resource>
-			<resource>
-				<directory>lib</directory>
-			</resource>
 		</resources>
+		
 		<testResources>
 			<testResource>
 				<directory>src/test/resources</directory>
 			</testResource>
 		</testResources>
+		
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
-				<configuration>
-					<source>${jdk.version}</source>
-					<target>${jdk.version}</target>
-					<encoding>${project.build.sourceEncoding}</encoding>
-				</configuration>
 			</plugin>
 			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>2.9</version>
-				<configuration>
-					<buildOutputDirectory>${project.build.directory}/classes</buildOutputDirectory>
-					<downloadSources>true</downloadSources>
-					<downloadJavadocs>false</downloadJavadocs>
-					<useProjectReferences>false</useProjectReferences>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
